[package]
name = "tracked"
version = "1.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avro-rs = { version = "0.13.0", features = ["snappy"] }
chrono = { version = "0.4.22", features = ["serde"] }
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["serde"] }
md5 = "0.7.0"
rocket = { version = "0.5.0", features = ["json"] }
rstar = { version = "0.9.3", features = ["serde", "debug"] }
serde = { version = "1.0", features = ["derive", "default"] }
serde_json = "1.0"
simplelog = "0.12.0"
splines = "4.3.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5.10"
walkdir = "2.5.0"
